--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "releasewin": "yarn compile && electron-builder --win -p always"
   },
   "dependencies": {
+    "bootstrap": "^3.3.7",
     "react": "^16.2.0",
     "react-bootstrap": "^0.31.5",
     "react-dom": "^16.2.0",
